--- a/templates/signup.html
+++ b/templates/signup.html
@@ -74,6 +74,7 @@
     </div>
 
     <span class="d-flex justify-content-md-center align-items-center">Already have an account? <a style="margin-left: 5px;" href="{{url_for('login')}}"> Log in!</a></span>
+    <!-- <h3 align="center">Already have an account? <a style="margin-left: 5px;" href="{{url_for('login')}}"> Log in!</a></h3> -->
 
     {% endif %}
 
