--- a/templates/signup.html
+++ b/templates/signup.html
@@ -73,8 +73,7 @@
         </form>
     </div>
 
-    <span class="d-flex justify-content-md-center align-items-center">Already have an account? <a style="margin-left: 5px;" href="{{url_for('login')}}"> Log in!</a></span>
-    <!-- <h3 align="center">Already have an account? <a style="margin-left: 5px;" href="{{url_for('login')}}"> Log in!</a></h3> -->
+    <h5 align="center">Already have an account? <a href="{{url_for('login')}}"> Sign in!</a></h5>
 
     {% endif %}
 
