--- a/templates/search.html
+++ b/templates/search.html
@@ -8,13 +8,13 @@
 
     {% if current_user.is_authenticated %}
         <br>
-            <h1 align="center">Adverts</h1>
+            <h1 align="center">Tasks</h1>
         <br>
         {% if search == "" %}
-            <h3 style="margin-top: 5%;" align="center">That was not so decriptive</h3> 
+            <h3 style="margin-top: 5%;" align="center">No result found</h3> 
 
         {% elif result == [] %}
-            <h3 style="margin-top: 5%;" align="center">Could'nt find {{search}}'s post!</h3>
+            <h3 style="margin-top: 5%;" align="center">No result found for {{search}}</h3>
             
         {% else %}
             <div class="container">
@@ -27,9 +27,9 @@
                 <table class="table table-striped">
                     <thead>
                         <tr>
-                            <th scope="col">Owner</th>
+                            <th scope="col">Author</th>
                             <th scope="col">Task</th>
-                            <th scope="col">Added</th>
+                            <th scope="col">Date created</th>
                         </tr>
 
                     </thead>
@@ -49,23 +49,28 @@
         
     {% else %}
         <br>
-            <h1 align="center">Adverts</h1>
+            <h1 align="center">Tasks</h1>
         <br>
         {% if search == "" %}
-            <h3 style="margin-top: 5%;" align="center">That was not so decriptive</h3> 
+            <h3 style="margin-top: 5%;" align="center">No results found</h3> 
         
         {% elif result == [] %}
-            <h3 style="margin-top: 5%;" align="center">Could'nt find {{search}}'s post!</h3>
+            <h3 style="margin-top: 5%;" align="center">No results found for {{search}}</h3>
             
         {% else %}
             <div class="container">
 
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="{{url_for('ads')}}">Tasks</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">{{search}}</li>
+                </ol>
+
                 <table class="table table-striped">
                     <thead>
                         <tr>
-                            <th scope="col">Owner</th>
+                            <th scope="col">Author</th>
                             <th scope="col">Task</th>
-                            <th scope="col">Added</th>
+                            <th scope="col">Date created</th>
                         </tr>
 
                     </thead>
