--- a/templates/search.html
+++ b/templates/search.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block head %}
-    <title>Adverts</title>
+    <title>Search</title>
 {% endblock %}
 
 {% block body %}
