--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,11 @@
                   <form 
                   class="form-inline my-2 my-lg-0"
                   action="/search">
+                    <button 
+                        class="btn btn-outline-success my-2 my-sm-0 d-lg-none" 
+                        type="submit">
+                        Search
+                    </button>
                     <input 
                         class="form-control mr-sm-2" 
                         type="search" 
@@ -44,7 +49,7 @@
                         aria-label="Search"
                         name="search">
                     <button 
-                        class="btn btn-outline-success my-2 my-sm-0" 
+                        class="btn btn-outline-success my-2 my-sm-0 d-none d-lg-block" 
                         type="submit">
                         Search
                     </button>
