--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,10 @@
 
 {% block body %}
 
-<!-- I got the style part from https://stackoverflow.com/questions/65352606/background-image-in-bootstrap-css-does-not-cover-full-screen -->
+
 
     {% if current_user.is_authenticated %}
-
+        <!-- style part is from https://stackoverflow.com/questions/65352606/background-image-in-bootstrap-css-does-not-cover-full-screen -->
         <div 
         style=" 
         margin-top: -4%;
