--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,6 +14,7 @@
     <br>
     <div class="container">
         <h3 align="center">My Tasks</h3><br>
+        <!--  Table design reference https://www.youtube.com/watch?v=Z1RJmh_OqeA -->
         <table class="table table-striped">
             <thead>
                 <tr>
