--- a/templates/signup.html
+++ b/templates/signup.html
@@ -20,6 +20,7 @@
         <br>
         <h1 align="center">Welcome to DB</h1>
         <br>
+        <!-- form design is from bootstrap https://getbootstrap.com/docs/5.0/forms/overview/-->
         <form action="/signup" method="POST">
             <div class="form-group row">
                 <label class="col-sm-2 col-form-label" for="fname">First Name</label>
