--- a/templates/base.html
+++ b/templates/base.html
@@ -77,6 +77,7 @@
             </div>
           </nav>
 
+          <!-- flash messages reference https://www.youtube.com/watch?v=abCSKRMGZ3A&t=410s -->
           {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
               {% for category, message in messages %}
