--- a/templates/signup.html
+++ b/templates/signup.html
@@ -18,7 +18,7 @@
 
     <div class="container">
         <br>
-        <h1 align="center">Welcome to DB</h1>
+        <h1 align="center">Welcome to TaskMate</h1>
         <br>
         <!-- form design is from bootstrap https://getbootstrap.com/docs/5.0/forms/overview/-->
         <form action="/signup" method="POST">
